Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -349,6 +349,22 @@
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sharknuevo.jpg" alt=""></div>
     </div>    
     <hr class="featurette-divider"> 
+
+
+
+      <!-- TRAGO 6-->
+
+    
+    <div class="row featurette mb-0">
+      <div class="col-md-6 order-md-2">
+        <h2 class="featurette-heading text-success">Dia de los muertos <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
+        <p class="lead" ><p>Gin, Falernum, Lima, Frutos del bosque, Jengibre Syrup, Anana</p>Un Coctel que te sorprendera en su sabor tropical</p>
+      <p><u>Perfil</u> Dulce tropical </p>
+      </div>
+      <div class="col-md-6 order-md-1" height="500">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sharknuevo.jpg" alt=""></div>
+    </div>    
+    <hr class="featurette-divider"> 
    
 
 <!-- TRAGO 7  -->
@@ -747,6 +763,7 @@
       
   </body>
 </html>
+
 
 
 
