--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
       <p><u>Perfil</u> Dulce tropical </p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sharknuevo.jpg" alt=""></div>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/esqueleto.jpg" alt=""></div>
     </div>    
     <hr class="featurette-divider"> 
    
@@ -763,6 +763,7 @@
       
   </body>
 </html>
+
 
 
 
