--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button onclick="closeMessage('message1')">Aceptar</button>
 </div>
 <div id="message2" class="message message2">
-    Hoy de 19:00hs a 21:30hs tenemos promo 2x1 en daiquiri Frozzen Saborizados y Expresso Martini
+    Hoy de 19:00hs a 21:30hs tenemos promo 2x1 en daiquiri Frozzen Saborizados, Expresso Martini y Zombie
     <button onclick="closeMessage('message2')">Aceptar</button>
 </div>
 
@@ -763,6 +763,7 @@
       
   </body>
 </html>
+
 
 
 
