Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@
 
       <!-- TRAGO 6-->
 
+<hr class="featurette-divider">
+
     
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
@@ -749,6 +751,7 @@
       
   </body>
 </html>
+
 
 
 
