--- a/index.html
+++ b/index.html
@@ -191,9 +191,8 @@
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
     <h2 class="featurette-heading text-info">ROOM 44 <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
-    <p class="lead" ><p>Ron, Lima, Pomelo, Anana, Menta, perfume de Falernum, Thomix #4.</p>Un cóctel tropical, dulce y refrescante.
-    La mezcla de ron, falernum y cordial de banana con jengibre se equilibra con la acidez de la lima, la frescura del ananá y la suavidad del óleo de mango.
-    Ideal para quienes buscan una experiencia frutal y exótica. </p>
+    <p class="lead" ><p>Ron, Lima, Pomelo, Anana, Menta, perfume de Falernum, Thomix #4.</p>Coctel creado por <a href="https://www.instagram.com/thomasvillanueva_/?hl=es"> Thomás Villanueva</a>, 
+    para la final internacional, disputada en El Salvador </p>
     <p><u>Thomix #4:</u> Cordial de cafe y almendras tostadas</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
@@ -204,7 +203,7 @@
     <hr class="featurette-divider">
     <div class="row featurette">
       <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-danger">Zombie <span class="text-muted fuenteCursiva"><p>$9.000</span></p></h2>
+        <h2 class="featurette-heading text-danger">Zombie <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
         <p class="lead" ><p>Ron Blanco, Ron Dorado, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p><p>El Zombie es un cóctel tiki legendario, 
         creado en 1934 por Donn Beach (Don the Beachcomber), pionero de la cultura tiki en EE. UU. Este coctel es famoso por "revivir a los muertos". Tradicionalmente, se limita a uno o dos por persona debido a su alto contenido alcohólico, pero aquí podemos dejarte llegar al 3ero.</p>
          <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
@@ -778,6 +777,7 @@
       
   </body>
 </html>
+
 
 
 
