--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
               </tbody>
           </table>
       </div>
-
+<!--
 
       <div >
         <h2 class="text-center mb-4">Whisky - Whiskey</h2>
@@ -588,7 +588,7 @@
                   <td>Johnnie Walker Double Black</td>
                   <td>$14.500</td> 
                 </tr>-->
-                              
+       <!--                       
                 <tr> 
                   <td>Jameson</td>
                   <td>$15.000</td>  
@@ -619,7 +619,7 @@
                 </tr>
                 </tbody>
             </table>
-        </div>
+        </div>-->
 
         <div id="sin_alcohol">
           <h2 class="text-center mb-4">SIN ALCOHOL</h2>
@@ -643,14 +643,14 @@
                     <td>Agua Con o Sin Gas</td>
                     <td>$4.000</td> 
                   </tr>
-              <tr></tr>
+              <!--<tr></tr>
                     <td>Café</td>
                     <td>$3.000</td> 
                   </tr>
                   <tr></tr>
                     <td>Café con leche</td>
                     <td>$3.800</td> 
-                  </tr>
+                  </tr>-->
                   </tbody>
               </table>
           </div>
@@ -659,7 +659,7 @@
     <h2 class="text-center mb-4">Comidas</h2>
   <table class="table table-dark table-striped">
     <thead>
-      <!-- PIZZAS -->
+      <!-- PIZZAS 
       <tr><h3 class="text-center mb-4">Pizzas</h3></tr>
     </thead>
     <tbody>
@@ -675,7 +675,7 @@
         <td>Especial</td>
         <td>$18.000</td>  
       </tr>
-    </table>
+    </table>-->
 
       <!-- hamburguesas -->
       <table class="table table-dark table-striped">
@@ -699,24 +699,24 @@
       </tbody>
   </table>
 
-  <!-- Papas-->
+   Papas-->
   <table class="table table-dark table-striped">
     <thead>
-      <tr><h3 class="text-center mb-4">Papas----> Porción Individual</h3></tr>
+      <tr><h3 class="text-center mb-4">Papas----> Porción Individual </h3></tr>
     </thead>
     <tbody>
-      <tr>
+     <!-- <tr>
         <td>Cheddar</td>
         <td>$11.000</td> 
-      </tr>
+      </tr>-->
       <tr> 
-        <td>Papas Tiki ----> (Cheddar,Bacon, verdeo) </td>
+        <td>Papas Tiki ----> (Cheddar, Bacon, verdeo) </td>
         <td>$12.000</td>  
       </tr>
-      <tr> 
+     <!-- <tr> 
         <td>Spicy</td>
         <td>$9.000</td>  
-      </tr>
+      </tr>-->
       <tr> 
         <td>Clasicas (Salsa a eleccion: Ketchup, Barbacoa)</td>
         <td>$9.000</td>  
@@ -724,7 +724,7 @@
     </tbody>
 </table>
 <div id="Free" class="row featurette mb-0">
-  <!-- Tequeños-->
+  <!-- Tequeños
   <table class="table table-dark table-striped">
     <thead>
       <tr><h3 class="text-center mb-4">Tequeños Venezolanos</h3></tr>
@@ -739,7 +739,7 @@
         <td>$16.000</td>  
       </tr>
     </tbody>
-</table>
+</table>-->
 <div id="Free" class="row featurette mb-0">
       <div  class="col-md-6 order-md-2">
         <h2  class="featurette-heading text-warning">Dejanos tu Comentario en Google <span class="text-muted fuenteCursiva"><p>Es muy simple</span></p></h2>
@@ -777,6 +777,7 @@
       
   </body>
 </html>
+
 
 
 
