Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -484,9 +484,13 @@
         <tbody>
       <tr>
         <td>Fernet</td>
-        <td>$7.000</td> 
+        <td>$8.000</td> 
       </tr>
-           <tr> 
+          <tr> 
+        <td>Gin Tonic <a href="https://yugengin.com/">Yugen</a></td>
+        <td>$8.000</td>  
+      </tr>
+          <!--  <tr> 
         <td>Garibaldi (Campari con Naranja)</td>
         <td>$7.000</td>  
       </tr>
@@ -777,6 +781,7 @@
       
   </body>
 </html>
+
 
 
 
