--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
     <h2 class="text-center mb-4">Comidas</h2>
   <table class="table table-dark table-striped">
     <thead>
-      <!-- PIZZAS 
+       PIZZAS 
       <tr><h3 class="text-center mb-4">Pizzas</h3></tr>
     </thead>
     <tbody>
@@ -672,12 +672,13 @@
         <td>$16.000</td> 
       </tr>
       <tr> 
-        <td>Roquefort</td>
-        <td>$22.000</td>  
-      </tr>
-      <tr> 
         <td>Especial</td>
         <td>$18.000</td>  
+      </tr>
+
+        <!-- <tr> 
+        <td>Roquefort</td>
+        <td>$22.000</td>  
       </tr>
     </table>-->
 
@@ -781,6 +782,7 @@
       
   </body>
 </html>
+
 
 
 
