--- a/index.html
+++ b/index.html
@@ -199,6 +199,57 @@
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/room.jpeg" alt="">
    </div>
 </div>
+
+
+<!-- TRAGO Jony -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-info">Jungle Bird <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
+    <p class="lead" ><p>Ron añejo, Campari, Lima, Ananá, Almibar de caña, Thomix </p>Un coctel preparado por  <a href="https://www.instagram.com/jonysilvero/?hl=es"> Jony Silvero</a>, 
+  campeon Argentino de La Tiki League Argentina 2023, Jefe de barra de "Baru" gastropub. </p>
+  
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/junglebirdj.jpeg" alt="">
+   </div>
+    </div>
+      <!-- TRAGO Banana Breeze -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-info">Mr. Bali Hai <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
+    <p class="lead" ><p>Ron añejo, Licor de cafe, Anana, Lima, Almibar simple </p>Un coctel preparado por  <a href="https://www.instagram.com/jonysilvero/?hl=es"> Jony Silvero</a>, 
+  campeon Argentino de La Tiki League Argentina 2023, Jefe de barra de "Baru" gastropub.</p>
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/balihali.jpeg" alt="">
+   </div>
+</div>
+  <!-- TRAGO Banana Breeze -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-info">Swizzle del Caribe <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
+    <p class="lead" ><p>Blen de Rones, Jugo de frutas tropicales, Lima, Falernum, Angostura Bitter, Menta </p>Un coctel preparado por  <a href="https://www.instagram.com/jonysilvero/?hl=es"> Jony Silvero</a>, 
+  campeon Argentino de La Tiki League Argentina 2023, Jefe de barra de "Baru" gastropub.</p>
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sweezle.jpeg" alt="">
+   </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+      
 <!-- TRAGO 3--> 
     <hr class="featurette-divider">
     <div class="row featurette">
@@ -782,6 +833,7 @@
       
   </body>
 </html>
+
 
 
 
