Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
       <table class="table table-dark table-striped">
       <thead>
         <tr><h3 class="text-center mb-4">Hamburguesas </h3></tr>
-        <tr><h5 class="text-center mb-2 style="font-size: 0.9rem;">Todas vienen acompañadas de una pequeña porción de papas</h5></tr>-->
+        <tr><h5 class="text-center mb-2 style="font-size: 0.9rem;">Todas vienen acompañadas de una pequeña porción de papas</h5></tr>
       </thead>
       <tbody>
         <tr>
@@ -690,7 +690,7 @@
      <tr> 
         <td>Spicy</td>
         <td>$9.000</td>  
-      </tr>-->
+     </tr>
       <tr> 
         <td>Clasicas (Salsa a eleccion: Ketchup, Barbacoa)</td>
         <td>$9.000</td>  
@@ -751,6 +751,7 @@
       
   </body>
 </html>
+
 
 
 
