Replace 'Hello World' with 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button onclick="closeMessage('message1')">Aceptar</button>
 </div>
 <div id="message2" class="message message2">
-    Hoy de 19:00hs a 21:30hs tenemos promo 2x1 en daiquiri Frozzen Saborizados, Expresso Martini y Zombie
+    Hoy de 19:00hs a 21:30hs tenemos promo 2x1 en daiquiri Frozzen Saborizados, Expresso Martini
     <button onclick="closeMessage('message2')">Aceptar</button>
 </div>
 
@@ -677,6 +677,7 @@
       
   </body>
 </html>
+
 
 
 
