--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
-        <h2 class="featurette-heading text-success">Shark <span class="text-muted fuenteCursiva"><p>$8.5a00</span></p></h2>
+        <h2 class="featurette-heading text-success">Shark <span class="text-muted fuenteCursiva"><p>$8.500</span></p></h2>
         <p class="lead" ><p>Ron Blanco, Ron Dorado, Syrup de Frambuesas, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Coctel con Notas amargas que te invita a dejarte atrapar por los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
       <p><u>Perfil</u> Amargo, notas citricas</p>
       </div>
@@ -677,6 +677,7 @@
       
   </body>
 </html>
+
 
 
 
