--- a/mugs/index.html
+++ b/mugs/index.html
@@ -72,7 +72,7 @@
                 Escapa a lo<br>Exótico
             </h1>
             <p class="text-lg md:text-xl text-stone-300 mb-10 max-w-2xl mx-auto leading-relaxed font-light">
-                Descubre piezas únicas, talladas con el espíritu de las islas. No son solo vasos, son el alma de tu barra.
+                Descubre piezas únicas, talladas con el espíritu de las islas. No son solo vasos, son los espiritus del Tiki.
             </p>
             <a href="#coleccion" class="inline-block bg-gradient-to-r from-amber-600 to-orange-600 text-white font-bold px-10 py-4 rounded-full hover:shadow-[0_0_30px_-5px_rgba(245,158,11,0.6)] transition-all scale-100 hover:scale-105">
                 Explorar la Jungla
@@ -193,3 +193,4 @@
     </script>
 </body>
 </html>
+
