Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                     <div class="feature-icon">🍹</div>
                     <h3>Curso de Bartender</h3>
                     <p>Aprendé con nosotros sobre el mundo de la coctelería. ¡Convertite en un experto!</p>
-                    <a href="https://eze-leky.github.io/ibizadrinks/" target="_blank" class="feature-btn">Saber Más</a>
+                    <a href="https://cursodebartenders.netlify.app/" target="_blank" class="feature-btn">Saber Más</a>
                 </div>
             </div>
         </section>
@@ -1114,3 +1114,4 @@
     </script>
 </body>
 </html>
+
