--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="hero-title">Paraíso Tropical</h1>
-            <p class="hero-subtitle">Cocteles exóticos únicos en Buenos Aires</p>
+            <p class="hero-subtitle">Cocteles exóticos únicos en La Plata</p>
             <a href="#cocktails" class="hero-cta">Explorar Carta 🌺</a>
         </div>
     </section>
@@ -1319,3 +1319,4 @@
     </script>
 </body>
 </html>
+
