--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
         // ============================================
         // MODO DE PRUEBA: Cambia esto a true para probar el modo miércoles
         // ============================================
-        const TEST_WEDNESDAY_MODE = false; // Cambia a true para probar
+        const TEST_WEDNESDAY_MODE = true; // Cambia a true para probar
         
         // Cocktails Data
         const regularCocktails = [
@@ -1319,4 +1319,5 @@
     </script>
 </body>
 </html>
+
 
