--- a/index.html
+++ b/index.html
@@ -783,8 +783,8 @@
     </footer>
 
     <script>
-        const TEST_MODE = false;
-        const TEST_DAY = 'wednesday';
+        const TEST_MODE = true; //cambiar a true para probar
+        const TEST_DAY = 'wednesday'; // Opciones: 'wednesday', 'promo', 'regular'
 
         const regularCocktails = [
             {
@@ -1270,3 +1270,4 @@
     </script>
 </body>
 </html>
+
