--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
 
     <script>
         const TEST_MODE = true; //cambiar a true para probar
-        const TEST_DAY = 'wednesday'; // Opciones: 'wednesday', 'promo', 'regular'
+        const TEST_DAY = 'promo'; // Opciones: 'wednesday', 'promo', 'regular'
 
         const regularCocktails = [
             {
@@ -1270,4 +1270,5 @@
     </script>
 </body>
 </html>
+
 
