--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
     </footer>
 
     <script>
-        const TEST_MODE = true; //cambiar a true para probar
+        const TEST_MODE = false; //cambiar a true para probar
         const TEST_DAY = 'promo'; // Opciones: 'wednesday', 'promo', 'regular'
 
         const regularCocktails = [
@@ -1270,5 +1270,6 @@
     </script>
 </body>
 </html>
+
 
 
