--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Tiki House Bar - Coctelería Tropical Exótica en Buenos Aires">
+    <meta name="description" content="Tiki House Bar - Coctelería Tropical Exótica en La Plata">
     <title>Tiki House Bar - Paraíso Tropical</title>
     <link rel="icon" href="./assets/img/cocktail.png" type="image/png" sizes="96x96">
     
@@ -658,7 +658,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="hero-title">Paraíso Tropical</h1>
-            <p class="hero-subtitle">Cocteles exóticos únicos en Buenos Aires</p>
+            <p class="hero-subtitle">Cocteles exóticos únicos en La Plata</p>
             <a href="#cocktails" class="hero-cta">Explorar Carta 🌺</a>
         </div>
     </section>
@@ -775,7 +775,7 @@
 
     <footer>
         <div class="footer-content">
-            <p>&copy; 2025 Tiki House Bar - Buenos Aires</p>
+            <p>&copy; 2026 Tiki House Bar - La Plata</p>
             <p style="margin-top: 1rem;">
                 <a href="#" class="footer-link">Volver arriba ↑</a>
             </p>
@@ -1270,6 +1270,7 @@
     </script>
 </body>
 </html>
+
 
 
 
