--- a/index.html
+++ b/index.html
@@ -783,8 +783,8 @@
     </footer>
 
     <script>
-        const TEST_MODE = false; //cambiar a true para probar
-        const TEST_DAY = 'promo'; // Opciones: 'wednesday', 'promo', 'regular'
+        const TEST_MODE = true; //cambiar a true para probar
+        const TEST_DAY = 'regular'; // Opciones: 'wednesday', 'promo', 'regular'
 
         const regularCocktails = [
             {
@@ -1270,6 +1270,7 @@
     </script>
 </body>
 </html>
+
 
 
 
