Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
     </footer>
 
     <script>
-        const TEST_MODE = false;
+        const TEST_MODE = true;
         const TEST_DAY = 'wednesday';
 
         const regularCocktails = [
@@ -1275,3 +1275,4 @@
     </script>
 </body>
 </html>
+
