--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
             {
                 name: "Gibson",
                 price: "$10.000",
-                image: "./assets/img/trago3.jpeg",
+                image: "https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?w=600",
                 ingredients: "Gin, Vermut Seco, Cebollita en vinagre",
                 description: "La variación más elegante del Martini. Se distingue por llevar una cebollita en vinagre en lugar de aceituna.",
                 profile: "Seco, Herbal"
@@ -897,7 +897,7 @@
             {
                 name: "Dry Martini",
                 price: "$10.000",
-                image: "./assets/img/trago3.jpeg",
+                image: "https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?w=600",
                 ingredients: "Gin, Vermut Seco, Aceituna o twist de limón",
                 description: "El clásico por excelencia. Elegante, sofisticado y atemporal. La medida perfecta entre gin y vermut seco.",
                 profile: "Seco, Herbal"
@@ -905,7 +905,7 @@
             {
                 name: "Gimlet",
                 price: "$10.000",
-                image: "./assets/img/oceanblue.jpg",
+                image: "https://images.unsplash.com/photo-1546171753-97d7676e4602?w=600",
                 ingredients: "Gin, Jugo de Lima, Jarabe Simple",
                 description: "Clásico refrescante y directo. Gin con lima y un toque de dulzor. Simple pero sofisticado.",
                 profile: "Cítrico, Refrescante"
@@ -913,7 +913,7 @@
             {
                 name: "Aviation Cocktail",
                 price: "$11.000",
-                image: "./assets/img/oceanblue.jpg",
+                image: "https://images.unsplash.com/photo-1536935338788-846bb9981813?w=600",
                 ingredients: "Gin, Maraschino, Crème de Violette, Limón",
                 description: "Un clásico pre-prohibición con su característico color violeta cielo. Floral, elegante y misterioso.",
                 profile: "Floral, Cítrico"
@@ -921,7 +921,7 @@
             {
                 name: "Vesper",
                 price: "$12.000",
-                image: "./assets/img/trago3.jpeg",
+                image: "https://images.unsplash.com/photo-1470337458703-46ad1756a187?w=600",
                 ingredients: "Gin, Vodka, Lillet Blanc",
                 description: "El Martini de James Bond. Fuerte, elegante y con carácter. Agitado, no revuelto.",
                 profile: "Seco, Potente"
@@ -929,7 +929,7 @@
             {
                 name: "Manhattan",
                 price: "$12.000",
-                image: "./assets/img/sweet.jpg",
+                image: "https://images.unsplash.com/photo-1560508992-26c5c2ae5119?w=600",
                 ingredients: "Whisky, Vermut Rosso, Angostura, Cereza",
                 description: "El rey de los clásicos americanos. Whisky y vermut rojo en perfecta armonía con amargos aromáticos.",
                 profile: "Dulce, Especiado"
@@ -937,7 +937,7 @@
             {
                 name: "Old Fashioned",
                 price: "$12.000",
-                image: "./assets/img/tikibang.jpg",
+                image: "https://images.unsplash.com/photo-1481391319762-47dff72954d9?w=600",
                 ingredients: "Whisky, Azúcar, Angostura, Naranja",
                 description: "El abuelo de todos los cocteles. Simple, elegante y poderoso. Whisky con azúcar, amargos y twist de naranja.",
                 profile: "Fuerte, Aromático"
@@ -945,7 +945,7 @@
             {
                 name: "Penicillin",
                 price: "$11.000",
-                image: "./assets/img/tropicalpunch.jpg",
+                image: "https://images.unsplash.com/photo-1551024506-0bccd828d307?w=600",
                 ingredients: "Whisky Escocés, Jengibre, Miel, Limón, Whisky Islay",
                 description: "Creación moderna que se volvió clásico instantáneo. Especiado, ahumado y curativo como su nombre indica.",
                 profile: "Especiado, Ahumado"
@@ -953,7 +953,7 @@
             {
                 name: "Blood and Sand",
                 price: "$10.000",
-                image: "./assets/img/zombieee.jpg",
+                image: "https://images.unsplash.com/photo-1574096079513-d8259312b785?w=600",
                 ingredients: "Whisky Escocés, Vermouth Rosso, Cherry Heering, Naranja",
                 description: "Clásico escocés inspirado en una película de 1922. Equilibrio perfecto entre dulce, amargo y frutal.",
                 profile: "Frutal, Equilibrado"
@@ -961,7 +961,7 @@
             {
                 name: "Boulevardier",
                 price: "$10.000",
-                image: "./assets/img/esqueleto.jpg",
+                image: "https://images.unsplash.com/photo-1608082198441-eedc4c24aff3?w=600",
                 ingredients: "Bourbon, Campari, Vermut Rosso",
                 description: "El Negroni americano. Whisky bourbon en lugar de gin, creando un perfil más robusto y especiado.",
                 profile: "Amargo, Robusto"
@@ -969,7 +969,7 @@
             {
                 name: "Pisco Sour",
                 price: "$15.000",
-                image: "./assets/img/kikuyaa.jpg",
+                image: "https://images.unsplash.com/photo-1587223075055-82e9a937ddff?w=600",
                 ingredients: "Pisco, Limón, Jarabe, Clara de huevo, Angostura",
                 description: "El orgullo sudamericano. Refrescante, espumoso y con el carácter único del pisco.",
                 profile: "Cítrico, Espumoso"
@@ -977,7 +977,7 @@
             {
                 name: "Americano",
                 price: "$8.000",
-                image: "./assets/img/sharknuevo.jpg",
+                image: "https://images.unsplash.com/photo-1578133671540-edad0b3d689e?w=600",
                 ingredients: "Campari, Vermut Rosso, Soda",
                 description: "El ancestro del Negroni. Refrescante y amargo, perfecto aperitivo italiano con un toque de soda.",
                 profile: "Amargo, Refrescante"
@@ -985,7 +985,7 @@
             {
                 name: "Clover Club",
                 price: "$10.000",
-                image: "./assets/img/sweet.jpg",
+                image: "https://images.unsplash.com/photo-1536849141654-987e5d714f1e?w=600",
                 ingredients: "Gin, Frambuesa, Limón, Clara de huevo, Jarabe",
                 description: "Clásico pre-prohibición con elegante espuma rosa. Frutal, sedoso y perfectamente equilibrado.",
                 profile: "Frutal, Sedoso"
